# backend

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py
app/api/v1/dev/: router.py
app/api/v1/file/: router.py  service.py
app/api/v1/project/: router.py  service.py
app/core/: config.py  lifespan.py  logger.py
app/core/handlers/log_handlers/: telegram.py
app/core/middlewares/: logger.py
app/entities/: types.py
app/entities/dto/responses/: audio_file.py  project.py
app/entities/models/: __init__.py  audio_file.py  auth_user.py  processing_log.py  project.py
app/entities/repositories/file/: base.py  supabase.py
app/entities/repositories/project/: base.py  supabase.py
app/entities/repositories/sss/: base.py  supabase.py
app/entities/repositories/stt/: base.py  external.py  mock.py
app/entities/schemas/: audio_file.py  auth_user.py  project.py
app/entities/schemas/events/: audio_file_event.py  event.py  project_event.py
app/entities/schemas/internals/: task.py
app/entities/schemas/requests/: audio_file.py  project.py
app/entities/schemas/responses/: audio_file.py  project.py
app/entities/types/: other.py  pagination.py  task_log.py  transcription_result.py
app/entities/types/enums/: event_type.py  ordering.py  processing_status.py  sorting.py
app/shared/: utils.py
app/shared/services/: event_manager.py  project_processor.py
app/shared/services/metadata_exporter/: __base__.py  __init__.py  csv_exporter.py
app/shared/utils/: other.py  query.py
(+9 files in other folders)
