[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "The server side for Somleng"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.5",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.0",
    "uvicorn[standard]>=0.38.0",
]


[project.scripts]
backend = "app.main:main"
